serde-implicit/tests/ui/repeated_tag.stderr
error: duplicate tags found
  --> tests/ui/repeated_tag.rs:10:9
   |
10 |         primary_tag: String,
   |         ^^^^^^^^^^^
